<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/homeimage"
        android:title="@string/home_text"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/diagnoseimage"
        android:title="@string/diagnose_text"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/cameraimage"
        android:title="" />
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/myplantsimage"
        android:title="@string/my_plants_text"/>
    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/myaccountimage"
        android:title="@string/my_account_text"/>

</menu>