<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.SignUpActivity">



        <CheckBox
            android:id="@+id/rememberMeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/remember_me_text"
            app:buttonTint="@color/primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEdit" />

        <Button
            android:id="@+id/signinButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/sign_in_text"
            android:textColor="?android:textColorPrimaryInverse"
            android:textSize="15sp"
            app:backgroundTint="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/facebookButton"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:dividerInsetEnd="10dp"
            app:dividerInsetStart="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/orText"
            app:layout_constraintEnd_toStartOf="@+id/orText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/orText" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:dividerInsetEnd="30dp"
            app:dividerInsetStart="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/orText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/orText"
            app:layout_constraintTop_toTopOf="@+id/orText" />

        <Button
            android:id="@+id/googleButton"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/continue_with_google"
            app:icon="@drawable/googleimage"
            app:iconTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orText"
            android:textColor="?android:textColorPrimary"
            app:rippleColor="@color/light_primary" />

        <Button
            android:id="@+id/appleButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:text="@string/continue_with_apple"
            app:icon="@drawable/appleimage"
            app:iconSize="20dp"
            app:iconTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/googleButton"
            android:fontFamily="@font/urbanist_bold"
            android:textColor="?android:textColorPrimary"
            app:rippleColor="@color/light_primary" />

        <Button
            android:id="@+id/facebookButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:text="@string/continue_with_facebook"
            app:icon="@drawable/facebookimage"
            app:iconTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appleButton"
            android:textColor="?android:textColorPrimary"
            android:fontFamily="@font/urbanist_bold"
            app:rippleColor="@color/light_primary" />




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEdit"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/password_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordText"
            app:startIconDrawable="@drawable/padlockicon"
            app:endIconDrawable="@drawable/password"
            app:endIconMode="custom"
            app:boxStrokeColor="@color/primary"
            app:hintTextColor="@color/primary_light">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEdit"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailText"
            app:startIconDrawable="@drawable/emailicon"
            android:hint="@string/email_text"
            app:boxStrokeColor="@color/primary"
            app:hintTextColor="@color/primary_light">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/signUpHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/sign_in_heading"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backButton" />

        <TextView
            android:id="@+id/signUpSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/urbanist_regular"
            android:text="@string/sign_in_subheading"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpHeading" />

        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/email_text"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpSub" />

        <TextView
            android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/password_text"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEdit" />

        <TextView
            android:id="@+id/createAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/urbanist_medium"
            android:text="@string/create_acccount_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rememberMeCheckBox" />

        <TextView
            android:id="@+id/orText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/urbanist_regular"
            android:text="@string/or_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createAccountText" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/forgot_password_text"
            android:textColor="@color/primary"
            app:layout_constraintBottom_toBottomOf="@+id/rememberMeCheckBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/rememberMeCheckBox"
            app:layout_constraintTop_toTopOf="@+id/rememberMeCheckBox"
            app:layout_constraintVertical_bias="0.344" />

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:tintMode="multiply"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_arrow_back_24"
            app:tint="?android:textColorPrimary" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/circularProgressIndicator"
            style="@style/Widget.App.CircularProgressIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/signinButton"
            app:layout_constraintEnd_toEndOf="@+id/signinButton"
            app:layout_constraintHorizontal_bias="0.939"
            app:layout_constraintStart_toStartOf="@+id/signinButton"
            app:layout_constraintTop_toTopOf="@+id/signinButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>